--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           key: dependencies-cache-{{ checksum "yarn.lock" }}
       - aws-cli/setup
       - serverless/setup
-      - run: sls deploy -c serverless.yml --stage << parameters.stage >>
+      - run: sls deploy -c serverless.yml -s << parameters.stage >>
 workflows:
   pn-deploy:
     jobs:
