bad config test

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,5 @@
 dev:
-  COMPANY_NAME: "United Naturals Dev"
+  COMPANY_NAME: "United Naturals Dev 2222"
 
 prod:
-  COMPANY_NAME: "United Naturals Prod"
+  COMPANY_NAME: "United Naturals Prod 2222"
