bad config test raj 2

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,5 @@
-dev:
-  COMPANY_NAME: "United Naturals Dev 333"
+pn-dev:
+  COMPANY_NAME: "United Naturals Dev pn dev"
 
-prod:
-  COMPANY_NAME: "United Naturals Prod 333"
+pn-prod:
+  COMPANY_NAME: "United Naturals Prod pn prod"
