bad config test raj 3

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,5 @@
-pn-dev:
-  COMPANY_NAME: "United Naturals Dev pn dev"
+un-dev:
+  COMPANY_NAME: "United Naturals Dev UN dev"
 
-pn-prod:
-  COMPANY_NAME: "United Naturals Prod pn prod"
+un-prod:
+  COMPANY_NAME: "United Naturals Prod UN prod"
