--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ workflows:
     jobs:
       - deploy:
           name: deploy_dev
-          stage: pn-dev
+          stage: un-dev
       - deploy:
           name: deploy_prod
-          stage: pn-prod
+          stage: un-prod
