--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,5 @@
 un-dev:
-  COMPANY_NAME: "United Naturals Dev UN dev"
+  COMPANY_NAME: "United Naturals Dev UN dev 2"
 
 un-prod:
-  COMPANY_NAME: "United Naturals Prod UN prod"
+  COMPANY_NAME: "United Naturals Prod UN prod 2"
