--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
     jobs:
       - deploy:
           name: deploy_dev
-          stage: dev
+          stage: un-dev
       - deploy:
           name: deploy_prod
-          stage: prod
+          stage: un-prod
